<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/accountInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_info"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/coinDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number_of_coins"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nutrients and Water Progress Bar here"
        android:textSize="20sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/status_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="warning message here"
        android:textColor="#FF0000"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/plant"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_report_image"/>

    <TextView
        android:id="@+id/levelDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/current_level"/>

    <LinearLayout
        android:id="@+id/badgesHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/badges"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBadges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>