<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/accountInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_info"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/coinDisplay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number_of_coins"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nutrients and Water Progress Bar here"
        android:textSize="20sp"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/dailyStatusTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:textColor="#4CAF50"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="gone"/>

    <!--to allow users to refresh the task lists if page seems to be hanging during image verification-->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="8dp"/>
        <!--acts as a container that will "inflate" and display-->
        <!--multiple instances of item_task.xml (one for each task)-->

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <LinearLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_verification"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"/>
    </LinearLayout>

</LinearLayout>